--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
             <li><a href="javascript:void(0)">URIAGE</a></li>
             <li><a href="javascript:void(0)">KRISPYKREME</a></li>
             <li><a href="javascript:void(0)">YUHAN</a></li>
-            <li><a href="javascript:void(0)">TWOSOME COFFEE</a></li>
+            <li><a href="javascript:void(0)">TWOSOME</a></li>
             <li><a href="javascript:void(0)">DONGA</a></li>
-            <li><a href="javascript:void(0)">DONGBU STEEL</a></li>
+            <li><a href="javascript:void(0)">DONGBU</a></li>
             <li><a href="javascript:void(0)">OVERWATCH HERO</a></li>
           </ul>
         </li>
@@ -178,112 +178,77 @@
               <div class="brandlist">
                 <ul>
                   <li>
+                    <a target="_blank" href="sub_starbucks.html">
+                      <div id="starbucks" class="portfolio_img">
+                        <img src="images/starbucks_hover.png" alt="starbucks logo" />
+                        <div class="starbucksbg"></div>
+                      </div>
+                      <h3 class="brandname">STARBUCKS</h3>
+                    </a>
+                  </li>
+                  <li>
+                    <a target="_blank" href="sub_uriage.html">
+                      <div id="uriage" class="portfolio_img">
+                        <img src="images/uriage_hover.png" alt="uriage logo" />
+                        <div class="uriagebg"></div>
+                      </div>
+                      <h3 class="brandname">URIAGE</h3>
+                    </a>
+                  </li>
+                  <li>
                     <a target="_blank" href="sub_krispykreme.html">
-                      <div id="krispykreme" class="pc_list">
+                      <div id="krispykreme" class="portfolio_img">
                         <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
                         <div class="krispykremebg"></div>
-                      </div>
-                      <div id="krispykreme" class="tablet_list">
-                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_t"></div>
                       </div>
                       <h3 class="brandname">KRISPYKREME</h3>
                     </a>
                   </li>
                   <li>
-                    <a target="_blank" href="sub_krispykreme.html">
-                      <div id="krispykreme" class="pc_list">
-                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
-                        <div class="krispykremebg"></div>
+                    <a target="_blank" href="sub_yuhan.html">
+                      <div id="yuhan" class="portfolio_img">
+                        <img src="images/yuhan_hover.png" alt="yuhan logo" />
+                        <div class="yuhanbg"></div>
                       </div>
-                      <div id="krispykreme" class="tablet_list">
-                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_t"></div>
-                      </div>
-                      <h3 class="brandname">KRISPYKREME</h3>
+                      <h3 class="brandname">YUHAN</h3>
                     </a>
                   </li>
                   <li>
-                    <a target="_blank" href="sub_krispykreme.html">
-                      <div id="krispykreme" class="pc_list">
-                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
-                        <div class="krispykremebg"></div>
+                    <a target="_blank" href="sub_twosome.html">
+                      <div id="twosome" class="portfolio_img">
+                        <img src="images/twosome_hover.png" alt="twosome logo" />
+                        <div class="twosomebg"></div>
                       </div>
-                      <div id="krispykreme" class="tablet_list">
-                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_t"></div>
-                      </div>
-                      <h3 class="brandname">KRISPYKREME</h3>
+                      <h3 class="brandname">TWOSOME</h3>
                     </a>
                   </li>
                   <li>
-                    <a target="_blank" href="sub_krispykreme.html">
-                      <div id="krispykreme" class="pc_list">
-                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
-                        <div class="krispykremebg"></div>
+                    <a target="_blank" href="sub_donga.html">
+                      <div id="donga" class="portfolio_img">
+                        <img src="images/donga_hover.png" alt="donga logo" />
+                        <div class="dongabg"></div>
                       </div>
-                      <div id="krispykreme" class="tablet_list">
-                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_t"></div>
-                      </div>
-                      <h3 class="brandname">KRISPYKREME</h3>
+                      <h3 class="brandname">DONGA</h3>
                     </a>
                   </li>
                   <li>
-                    <a target="_blank" href="sub_krispykreme.html">
-                      <div id="krispykreme" class="pc_list">
-                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
-                        <div class="krispykremebg"></div>
+                    <a target="_blank" href="sub_dongbu.html">
+                      <div id="dongbu" class="portfolio_img">
+                        <img src="images/dongbu_hover.png" alt="dongbu logo" />
+                        <div class="dongbubg"></div>
                       </div>
-                      <div id="krispykreme" class="tablet_list">
-                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_t"></div>
-                      </div>
-                      <h3 class="brandname">KRISPYKREME</h3>
+                      <h3 class="brandname">DONGBU</h3>
                     </a>
                   </li>
                   <li>
-                    <a target="_blank" href="sub_krispykreme.html">
-                      <div id="krispykreme" class="pc_list">
-                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
-                        <div class="krispykremebg"></div>
+                    <a target="_blank" href="sub_overwatch.html">
+                      <div id="overwatch" class="portfolio_img">
+                        <img src="images/overwatch_hover.png" alt="overwatch logo" />
+                        <div class="overwatchbg"></div>
                       </div>
-                      <div id="krispykreme" class="tablet_list">
-                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_t"></div>
-                      </div>
-                      <h3 class="brandname">KRISPYKREME</h3>
+                      <h3 class="brandname">OVERWATCH</h3>
                     </a>
                   </li>
-                  <li>
-                    <a target="_blank" href="sub_krispykreme.html">
-                      <div id="krispykreme" class="pc_list">
-                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
-                        <div class="krispykremebg"></div>
-                      </div>
-                      <div id="krispykreme" class="tablet_list">
-                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_t"></div>
-                      </div>
-                      <h3 class="brandname">KRISPYKREME</h3>
-                    </a>
-                  </li>
-                  <li>
-                    <a target="_blank" href="sub_krispykreme.html">
-                      <div id="krispykreme" class="pc_list">
-                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
-                        <div class="krispykremebg"></div>
-                      </div>
-                      <div id="krispykreme" class="tablet_list">
-                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_t"></div>
-                      </div>
-                      <h3 class="brandname">KRISPYKREME</h3>
-                    </a>
-                  </li>
-
-
-
                 </ul>
               </div>
             </div>
@@ -348,20 +313,20 @@
                 <h3 class="subtitle">Graphic Design &amp; Digital Drawing</h3>
               </div>
               <ul class="artlist">
-                <li id="graphic">
-                  <a href="sub_cardnews.html">
+                <li id="graphic_design">
+                  <a href="#">
                     <div>
-                      <img src="images/cardnews.png" alt="cardnews" />
+                      <img src="images/graphic.png" alt="graphic design" />
                     </div>
                     <h2>Graphic Design</h2>
                   </a>
                 </li>
-                <li id="graphic">
-                  <a href="sub_cardnews.html">
+                <li id="web_design">
+                  <a href="#">
                     <div>
-                      <img src="images/cardnews.png" alt="cardnews" />
+                      <img src="images/cardnews.png" alt="web design" />
                     </div>
-                    <h2>Graphic Design</h2>
+                    <h2>Web Design</h2>
                   </a>
                 </li>
                 <li id="project">
