--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
 
   <div id="contentswrap">
-  <!-- toggle -->
+    <!-- toggle -->
     <label class="toggle toggle_menu" for="toggle">toggle</label>
     <!-- nav -->
     <input id="toggle" type="checkbox" />
@@ -102,14 +102,14 @@
             <span class="material-icons arrow-down">expand_more</span>
           </h3>
           <ul class="sub_nav">
-            <li><a href="javascript:void(0)">STARBUCKS</a></li>
-            <li><a href="javascript:void(0)">URIAGE</a></li>
-            <li><a href="javascript:void(0)">KRISPYKREME</a></li>
-            <li><a href="javascript:void(0)">YUHAN</a></li>
-            <li><a href="javascript:void(0)">TWOSOME</a></li>
-            <li><a href="javascript:void(0)">DONGA</a></li>
-            <li><a href="javascript:void(0)">DONGBU</a></li>
-            <li><a href="javascript:void(0)">OVERWATCH HERO</a></li>
+            <li><a target="_blank" href="javascript:void(0)">STARBUCKS</a></li>
+            <li><a target="_blank" href="javascript:void(0)">URIAGE</a></li>
+            <li><a target="_blank" href="sub_krispykreme.html">KRISPYKREME</a></li>
+            <li><a target="_blank" href="javascript:void(0)">YUHAN</a></li>
+            <li><a target="_blank" href="javascript:void(0)">TWOSOME</a></li>
+            <li><a target="_blank" href="javascript:void(0)">DONGA</a></li>
+            <li><a target="_blank" href="javascript:void(0)">DONGBU</a></li>
+            <li><a target="_blank" href="javascript:void(0)">OVERWATCH HERO</a></li>
           </ul>
         </li>
         <li>
@@ -123,10 +123,10 @@
             <span class="material-icons arrow-down">expand_more</span>
           </h3>
           <ul class="sub_nav">
-            <li><a href="javascript:void(0)">GRAPHIC DESIGN</a></li>
-            <li><a href="javascript:void(0)">CARDNEWS</a></li>
-            <li><a href="javascript:void(0)">DESIGN PROJECT</a></li>
-            <li><a href="javascript:void(0)">DIGITAL DRAWING</a></li>
+            <li><a target="_blank" href="javascript:void(0)">GRAPHIC DESIGN</a></li>
+            <li><a target="_blank" href="javascript:void(0)">CARDNEWS</a></li>
+            <li><a target="_blank" href="javascript:void(0)">DESIGN PROJECT</a></li>
+            <li><a target="_blank" href="javascript:void(0)">DIGITAL DRAWING</a></li>
           </ul>
         </li>
         <li>
@@ -314,7 +314,7 @@
               </div>
               <ul class="artlist">
                 <li id="graphic_design">
-                  <a href="#">
+                  <a target="_blank" href="#">
                     <div>
                       <img src="images/graphic.png" alt="graphic design" />
                     </div>
@@ -322,7 +322,7 @@
                   </a>
                 </li>
                 <li id="web_design">
-                  <a href="#">
+                  <a target="_blank" href="#">
                     <div>
                       <img src="images/cardnews.png" alt="web design" />
                     </div>
@@ -330,7 +330,7 @@
                   </a>
                 </li>
                 <li id="project">
-                  <a href="sub_balimoon.html">
+                  <a target="_blank" href="sub_balimoon.html">
                     <div>
                       <img src="images/balimoon.png" alt="project" />
                     </div>
@@ -338,7 +338,7 @@
                   </a>
                 </li>
                 <li id="drawing">
-                  <a href="sub_digitaldrawing.html">
+                  <a target="_blank" href="sub_digitaldrawing.html">
                     <div>
                       <img src="images/drawing.png" alt="drawing" />
                     </div>
