--- a/sub_krispykreme.html
+++ b/sub_krispykreme.html
@@ -1,195 +1,312 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta charset="UTF-8">
-	<title>sub_Krispykreme</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="format-detection" content="telephone=no" />
+  <title>김지선의 포트폴리오</title>
+  
+  <!-- 오픈 그래프(The Open Graph protocol) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Jisun's Portfolio" />
+  <meta property="og:title" content="Jisun's Portfolio" />
+  <meta property="og:description" content="안녕하세요. 감각적인 디자이너 김지선입니다." />
+  <meta property="og:image" content="./images/portfolio_seo.jpg" />
+  <meta property="og:url" content="#" />
 
-	<link rel="shortcut icon" type="images/x-icon" href="images/title_icon.png" />
-	<link rel="stylesheet" href="CSS/sub_layout.css" />
+  <!-- 트위터 카드(Twitter Cards) -->
+  <meta property="twitter:card" content="summary" />
+  <meta property="twitter:site" content="Jisun's Portfolio" />
+  <meta property="twitter:title" content="Jisun's Portfolio" />
+  <meta property="twitter:description" content="안녕하세요. 감각적인 디자이너 김지선입니다." />
+  <meta property="twitter:image" content="./images/portfolio_seo.jpg" />
+  <meta property="twitter:url" content="#" />
 
-	<script src="js/jquery-3.5.0.min.js"></script>
-    
+  <link rel="icon" href="./favicon.png" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <!-- GSAP & ScrollToPlugin -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollToPlugin.min.js" integrity="sha512-eI+25yMAnyrpomQoYCqvHBmY4dLfqKWPnD4j8y0E3Js+yqpF26xncL4t81M1zxC+ISYfRoCN52rN/n0q2UIBZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <link rel="stylesheet" href="css/sub_layout.css" />
+  <script src="js/jquery-3.5.0.min.js"></script>
+  <script defer src="./js/main.js"></script>
 </head>
 
 <body>
+  <!-- HOME BUTTON -->
+  <h1 class="myname">
+    <a href="index.html">JISUN KIM</a>
+  </h1>
+  <!-- toggle -->
+  <label class="toggle toggle_menu" for="toggle">toggle</label>
+  <!-- nav -->
+  <input id="toggle" type="checkbox" />
+  <nav id="main_nav_wrap">
+    <!-- 메인메뉴 -->
+    <ul id="main_nav">
+      <li>
+        <h3>
+          <a target="_blank" href="index.html">HOME</a>
+        </h3>
+      </li>
+      <li>
+        <h3>
+          PROJECTS
+          <span class="material-icons arrow-down">expand_more</span>
+        </h3>
+        <ul class="sub_nav">
+          <li><a target="_blank" href="javascript:void(0)">STARBUCKS</a></li>
+          <li><a target="_blank" href="javascript:void(0)">URIAGE</a></li>
+          <li><a target="_blank" href="sub_krispykreme.html">KRISPYKREME</a></li>
+          <li><a target="_blank" href="javascript:void(0)">YUHAN</a></li>
+          <li><a target="_blank" href="javascript:void(0)">TWOSOME</a></li>
+          <li><a target="_blank" href="javascript:void(0)">DONGA</a></li>
+          <li><a target="_blank" href="javascript:void(0)">DONGBU</a></li>
+          <li><a target="_blank" href="javascript:void(0)">OVERWATCH HERO</a></li>
+        </ul>
+      </li>
+      <!-- <li>
+        <h3>
+          <button onclick="location.href='index.html'">ABOUT ME</button>
+        </h3>
+      </li> -->
+      <li>
+        <h3>
+          ART WORKS
+          <span class="material-icons arrow-down">expand_more</span>
+        </h3>
+        <ul class="sub_nav">
+          <li><a target="_blank" href="javascript:void(0)">GRAPHIC DESIGN</a></li>
+          <li><a target="_blank" href="javascript:void(0)">CARDNEWS</a></li>
+          <li><a target="_blank" href="javascript:void(0)">DESIGN PROJECT</a></li>
+          <li><a target="_blank" href="javascript:void(0)">DIGITAL DRAWING</a></li>
+        </ul>
+      </li>
+      <!-- <li>
+        <h3>
+          <button onclick="contact()">CONTACT</button>
+        </h3>
+      </li> -->
+    </ul>
+    <!-- 닫기영역 -->
+    <label class="btn_close" for="toggle"></label>
+  </nav>
 
-	<!-- HOME BUTTON -->
-	<h1 class="myname">
-		<a href="index.html">JISUN KIM</a>
-	</h1>
+  <!-- MAIN SECTION -->
+  <div id="main">
+    <div class="contentswrap">
+      <div class="bg_wrap">
+        <img src="./images/main_kkd.png" alt="Krispykreme" />
+      </div>
+      <div class="title">
+        <h1 class="logo">Krispykreme</h1>
+        <h2>Website &amp; Mobile App</h2>
+        <h2>Redisign</h2>
+        <p>크리스피크림 도넛</p>
+        <p>웹사이트 &amp; 앱 리디자인</p>
+      </div>
+      <ul class="period">
+        <li>디자인 &#58; 1주 &#47; 퍼블리싱 &#58; 2주</li>
+        <li>참여율 100	&#37;</li>
+      </ul>
+    </div>
+  </div>
 
-	<!-- MAIN SECTION -->
-	<div id="main">
+  <!-- FIXED MENU -->
+  <script>
+    $(function(){
+      var mT=($(window).height()-$("div#menu").height())/2;
+      $("div#menu").css({top:mT});
 
-		<div class="contentswrap">
-			<div class="title">
-				<h1 class="logo">Krispykreme</h1>
-				<h2>Website &amp; Mobile App</h2>
-				<h2>Redisign</h2>
-				<p>크리스피크림 도넛</p>
-				<p>웹사이트 &amp; 앱 리디자인</p>
-			</div>
+      setInterval(function(){
+        mT=($(window).height()-$("div#menu").height())/2;
 
-			<ul class="period">
-				<li>디자인 &#58; 1주 &#47; 퍼블리싱 &#58; 2주</li>
-				<li>참여율 100	&#37;</li>
-			</ul>
-		</div>
-	</div>
+        $("div#menu").css({top:$(window).scrollTop()+mT});
+      },50);
 
-	<!-- FIXED MENU -->
-	<script>
-		$(function(){
-			var mT=($(window).height()-$("div#menu").height())/2;
-			$("div#menu").css({top:mT});
+      $("#btntop > a").click(function(){
+        $('html, body').animate({
+          scrollTop: 0
+        }, 400);
+      });
+    });
+  </script>
 
-			setInterval(function(){
-				mT=($(window).height()-$("div#menu").height())/2;
-
-				$("div#menu").css({top:$(window).scrollTop()+mT});
-			},50);
-
-			$("#btntop > a").click(function(){
-				$('html, body').animate({
-					scrollTop: 0
-				}, 400);
-			});
-
-		});
-	</script>
-	<div id="menu">
-		<ul>
-            <li class="uriage">
-				<a href="sub_uriage.html">
-					<div class="front">
-						<img src="images/uriage_logo.png" alt="유리아쥬 로고" />
-					</div>
-					<div class="back">
-						<img src="images/uriage_go.png" alt="유리아쥬 바로가기" />
-					</div>
-				</a>
-			</li>
-			<li class="krispykreme">
-				<a href="sub_krispykreme.html">
-					<div class="front">
-						<img src="images/krispykreme_logo.png" alt="크리스피크림 로고" />
-					</div>
-					<div class="back">
-						<img src="images/krispykreme_go.png" alt="크리스피크림 바로가기" />
-					</div>
-				</a>
-			</li>
-			<li class="yuhan">
-				<a href="sub_yuhan.html">
-					<div class="front">
-						<img src="images/yuhan_logo.png" alt="유한양행 로고" />
-					</div>
-					<div class="back">
-						<img src="images/yuhan_go.png" alt="유한양행 바로가기" />
-					</div>
-				</a>
-			</li>
-            <li class="cafecha">
-				<a href="sub_cafecha.html">
-					<div class="front">
-						<img src="images/cafecha_logo.png" alt="카페차 로고" />
-					</div>
-					<div class="back">
-						<img src="images/cafecha_go.png" alt="카페차 바로가기" />
-					</div>
-				</a>
-			</li>
-		</ul>
-	</div>
-		
-	<!-- INTRO SECTION -->
-	<section id="intro">
-		<div class="contentswrap">
-			<h2>크리스피크림 웹&#44; 모바일 앱 리뉴얼</h2>
-			<ul class="summary">
-				<li>
-					<h3>WORK</h3>
-					<p>UIUX 디자인 퍼블리싱</p>
-				</li>
-				<li>
-					<h3>RELEASE DATE</h3>
-					<p>2020&#46; 05&#46; 05</p>
-				</li>
-				<li>
-					<h3>TYPE</h3>
-					<p>WEB&#44; MOBILE APP</p>
-				</li>
-			</ul>
-			
-			<h3>OVERVIEW</h3>
-			<p>
-				크리스피크림 도넛은 당일 생상한 신선한 도넛만 판매한다는 원칙으로 달콤하고 신선한 도넛을 제공하는 도넛 브랜드이다. 기존 웹사이트는 수 많은 배너 개수로 사용자의 주의를 분산시키고, 인터렉션 요소가 많지 않아 다소 단조로운 디자인으로 다가오는 점이 아쉬웠다. 리뉴얼을 진행하며 크리스피크림 도넛만의 메뉴가 잘 돋보일 수 있도록 했고, 사용자가 필요한 정보를 메인페이지에 배치해 접근성을 높였다.
-			</p>
-		</div>
-	</section>
-	
-	<!-- MEDIA SECTION -->
-	<section id="media">
-		<div class="contentswrap">
-			<h3>MEDIA QUERY</h3>
-			<ul>
-				<li>PC &#58; 1920px &#45; 1400px</li>
-				<li>Mobile &#58; max 767px</li>
-			</ul>
-			<img src="images/media_kkd.png" alt="크리스피크림 도넛 미디어쿼리 목업 사진" />
-			<!-- 바로가기 버튼 -->
-			<ul class="go">
-				<li class="gosite"><a target="_blank" href="krispykreme/index.html">View Website</a></li>
-				<li class="gomobile"><a target="_blank" href="krispykreme/m/index.html">View Mobile App</a></li>
-			</ul>
-		</div>
-	</section>
-	
-	<!-- GUIDE SECTION -->
-	<section id="guide">
-		<div class="contentswrap">
-			<h3>STYLE GUIDE</h3>
-			<ul>
-				<li>
-					<img src="images/typography_kkd.png" alt="크리스피크림 도넛 typography" />
-				</li>
-				<li>
-					<img src="images/color_kkd.png" alt="크리스피크림 도넛 color" />
-				</li>
-			</ul>
-			
-			<h3>PAGE DESIGN</h3>
-			<dl>
-				<dt>Goal</dt>
-				<dd>
-					배너의 길이를 확장해 기존의 홈페이지 보다 사용자들이 신상품 이미지와 프로모션 이미지에 집중할 수 있도록 하고, 메뉴와 이벤트 정보를 한 눈에 확인할 수 있도록 한다.
-				</dd>
-				<dt>Concept</dt>
-				<dd>
-					다양한 마우스 오버 효과로 시각적 효과를 높이고, 땡땡이 무늬와 기존 크리스피크림 도넛 로고 색상인 그린과 레드를 포인트 컬러로 사용해 크리스피크림 도넛의 브랜드 아이덴티티를 나타내고 주 고객층인 젊은 고객들의 시선을 끌도록 한다.
-				</dd>
-			</dl>
-		</div>
-	</section>
-	
-	<!-- DETAIL SECTION -->
-	<section id="detail">
-		<div class="contentswrap">
-			<img class="pcdeail" src="images/pcdetail_kkd.png" alt="크리스피크림 도넛 pc 상세보기" />
-			<img class="mobiledetail" src="images/mobiledetail_kkd.png" alt="크리스피크림 도넛 mobile 상세보기" />
-		</div>
-	</section>
-	
-	<!-- FOOTER -->
-	<div class="footer">
-		<div id="btntop">
-			<a href="#"></a>
-		</div>
-		<p class="copyright">
-			Copyright(C) ALL RIGHTS RESERVED BY JISUN KIM
-		</p>
-	</div>
-	
+  <div id="menu">
+    <ul>
+      <li class="uriage">
+        <a href="sub_uriage.html">
+          <div class="front">
+            <img src="images/uriage_logo.png" alt="유리아쥬 로고" />
+          </div>
+          <div class="back">
+            <img src="images/uriage_go.png" alt="유리아쥬 바로가기" />
+          </div>
+        </a>
+      </li>
+      <li class="krispykreme">
+        <a href="sub_krispykreme.html">
+          <div class="front">
+            <img src="images/krispykreme_logo.png" alt="크리스피크림 로고" />
+          </div>
+          <div class="back">
+            <img src="images/krispykreme_go.png" alt="크리스피크림 바로가기" />
+          </div>
+        </a>
+      </li>
+      <li class="yuhan">
+        <a href="sub_yuhan.html">
+          <div class="front">
+            <img src="images/yuhan_logo.png" alt="유한양행 로고" />
+          </div>
+          <div class="back">
+            <img src="images/yuhan_go.png" alt="유한양행 바로가기" />
+          </div>
+        </a>
+      </li>
+      <li class="cafecha">
+        <a href="sub_cafecha.html">
+          <div class="front">
+            <img src="images/cafecha_logo.png" alt="카페차 로고" />
+          </div>
+          <div class="back">
+            <img src="images/cafecha_go.png" alt="카페차 바로가기" />
+          </div>
+        </a>
+      </li>
+      <li class="cafecha">
+        <a href="sub_cafecha.html">
+          <div class="front">
+            <img src="images/cafecha_logo.png" alt="카페차 로고" />
+          </div>
+          <div class="back">
+            <img src="images/cafecha_go.png" alt="카페차 바로가기" />
+          </div>
+        </a>
+      </li>
+      <li class="cafecha">
+        <a href="sub_cafecha.html">
+          <div class="front">
+            <img src="images/cafecha_logo.png" alt="카페차 로고" />
+          </div>
+          <div class="back">
+            <img src="images/cafecha_go.png" alt="카페차 바로가기" />
+          </div>
+        </a>
+      </li>
+      <li class="cafecha">
+        <a href="sub_cafecha.html">
+          <div class="front">
+            <img src="images/cafecha_logo.png" alt="카페차 로고" />
+          </div>
+          <div class="back">
+            <img src="images/cafecha_go.png" alt="카페차 바로가기" />
+          </div>
+        </a>
+      </li>
+      <li class="cafecha">
+        <a href="sub_cafecha.html">
+          <div class="front">
+            <img src="images/cafecha_logo.png" alt="카페차 로고" />
+          </div>
+          <div class="back">
+            <img src="images/cafecha_go.png" alt="카페차 바로가기" />
+          </div>
+        </a>
+      </li>
+    </ul>
+  </div>
+    
+  <!-- INTRO SECTION -->
+  <section id="intro">
+    <div class="contentswrap">
+      <h2>크리스피크림 웹&#44; 모바일 앱 리뉴얼</h2>
+      <ul class="summary">
+        <li>
+          <h3>WORK</h3>
+          <p>UIUX 디자인 퍼블리싱</p>
+        </li>
+        <li>
+          <h3>RELEASE DATE</h3>
+          <p>2020&#46; 05&#46; 05</p>
+        </li>
+        <li>
+          <h3>TYPE</h3>
+          <p>WEB&#44; MOBILE APP</p>
+        </li>
+      </ul>
+      <h3>OVERVIEW</h3>
+      <p>
+        크리스피크림 도넛은 당일 생상한 신선한 도넛만 판매한다는 원칙으로 달콤하고 신선한 도넛을 제공하는 도넛 브랜드이다. 기존 웹사이트는 수 많은 배너 개수로 사용자의 주의를 분산시키고, 인터렉션 요소가 많지 않아 다소 단조로운 디자인으로 다가오는 점이 아쉬웠다. 리뉴얼을 진행하며 크리스피크림 도넛만의 메뉴가 잘 돋보일 수 있도록 했고, 사용자가 필요한 정보를 메인페이지에 배치해 접근성을 높였다.
+      </p>
+    </div>
+  </section>
+  
+  <!-- MEDIA SECTION -->
+  <section id="media">
+    <div class="contentswrap">
+      <h3>MEDIA QUERY</h3>
+      <ul>
+        <li>PC &#58; 1920px &#45; 1400px</li>
+        <li>Mobile &#58; max 767px</li>
+      </ul>
+      <img src="images/media_kkd.png" alt="크리스피크림 도넛 미디어쿼리 목업 사진" />
+      <!-- 바로가기 버튼 -->
+      <ul class="go">
+        <li class="gosite"><a target="_blank" href="krispykreme/index.html">View Website</a></li>
+        <li class="gomobile"><a target="_blank" href="krispykreme/m/index.html">View Mobile App</a></li>
+      </ul>
+    </div>
+  </section>
+  
+  <!-- GUIDE SECTION -->
+  <section id="guide">
+    <div class="contentswrap">
+      <h3>STYLE GUIDE</h3>
+      <ul>
+        <li>
+          <img src="images/typography_kkd.png" alt="크리스피크림 도넛 typography" />
+        </li>
+        <li>
+          <img src="images/color_kkd.png" alt="크리스피크림 도넛 color" />
+        </li>
+      </ul>
+      <h3>PAGE DESIGN</h3>
+      <dl>
+        <dt>Goal</dt>
+        <dd>
+          배너의 길이를 확장해 기존의 홈페이지 보다 사용자들이 신상품 이미지와 프로모션 이미지에 집중할 수 있도록 하고, 메뉴와 이벤트 정보를 한 눈에 확인할 수 있도록 한다.
+        </dd>
+        <dt>Concept</dt>
+        <dd>
+          다양한 마우스 오버 효과로 시각적 효과를 높이고, 땡땡이 무늬와 기존 크리스피크림 도넛 로고 색상인 그린과 레드를 포인트 컬러로 사용해 크리스피크림 도넛의 브랜드 아이덴티티를 나타내고 주 고객층인 젊은 고객들의 시선을 끌도록 한다.
+        </dd>
+      </dl>
+    </div>
+  </section>
+  
+  <!-- DETAIL SECTION -->
+  <section id="detail">
+    <div class="contentswrap">
+      <img class="pcdeail" src="images/pcdetail_kkd.png" alt="크리스피크림 도넛 pc 상세보기" />
+      <img class="mobiledetail" src="images/mobiledetail_kkd.png" alt="크리스피크림 도넛 mobile 상세보기" />
+    </div>
+  </section>
+  
+  <!-- FOOTER -->
+  <div class="footer">
+    <div id="btntop">
+      <a href="#"></a>
+    </div>
+    <p class="copyright">
+      Copyright(C) ALL RIGHTS RESERVED BY JISUN KIM
+    </p>
+  </div>
+  
 </body>
 </html>
