--- a/sub_krispykreme.html
+++ b/sub_krispykreme.html
@@ -97,26 +97,6 @@
     <label class="btn_close" for="toggle"></label>
   </nav>
 
-  <!-- MAIN SECTION -->
-  <div id="main">
-    <div class="contentswrap">
-      <div class="bg_wrap">
-        <img src="./images/main_kkd.png" alt="Krispykreme" />
-      </div>
-      <div class="title">
-        <h1 class="logo">Krispykreme</h1>
-        <h2>Website &amp; Mobile App</h2>
-        <h2>Redisign</h2>
-        <p>크리스피크림 도넛</p>
-        <p>웹사이트 &amp; 앱 리디자인</p>
-      </div>
-      <ul class="period">
-        <li>디자인 &#58; 1주 &#47; 퍼블리싱 &#58; 2주</li>
-        <li>참여율 100	&#37;</li>
-      </ul>
-    </div>
-  </div>
-
   <!-- FIXED MENU -->
   <script>
     $(function(){
@@ -221,82 +201,106 @@
       </li>
     </ul>
   </div>
+
+  <!-- MAIN SECTION -->
+  <div id="main">
+    <div class="contentswrap">
+      <div class="bg_wrap">
+        <img src="./images/main_kkd.png" alt="Krispykreme" />
+      </div>
+      <div class="title">
+        <h1 class="logo">Krispykreme</h1>
+        <h2>Website &amp; Mobile App</h2>
+        <h2>Redisign</h2>
+        <p>크리스피크림 도넛</p>
+        <p>웹사이트 &amp; 앱 리디자인</p>
+      </div>
+      <ul class="period">
+        <li>디자인 &#58; 1주 &#47; 퍼블리싱 &#58; 2주</li>
+        <li>참여율 100	&#37;</li>
+      </ul>
+    </div>
+  </div>
+  
+  <!-- [s]CONTENTS -->
+  <div id ="section_wrap">
+    <!-- INTRO SECTION -->
+    <section id="intro">
+      <div class="contentswrap">
+        <h2>크리스피크림 웹&#44; 모바일 앱 리뉴얼</h2>
+        <ul class="summary">
+          <li>
+            <h3>WORK</h3>
+            <p>UIUX 디자인 퍼블리싱</p>
+          </li>
+          <li>
+            <h3>RELEASE DATE</h3>
+            <p>2022&#46; 01&#46; 05</p>
+          </li>
+          <li>
+            <h3>TYPE</h3>
+            <p>WEB&#44; MOBILE APP</p>
+          </li>
+        </ul>
+        <h3>OVERVIEW</h3>
+        <p>
+          크리스피크림 도넛은 당일 생상한 신선한 도넛만 판매한다는 원칙으로 달콤하고 신선한 도넛을 제공하는 도넛 브랜드이다. 기존 웹사이트는 수 많은 배너 개수로 사용자의 주의를 분산시키고, 인터렉션 요소가 많지 않아 다소 단조로운 디자인으로 다가오는 점이 아쉬웠다. 리뉴얼을 진행하며 크리스피크림 도넛만의 메뉴가 잘 돋보일 수 있도록 했고, 사용자가 필요한 정보를 메인페이지에 배치해 접근성을 높였다.
+        </p>
+      </div>
+    </section>
+  
+    <!-- MEDIA SECTION -->
+    <section id="media">
+      <div class="contentswrap">
+        <h3>MEDIA QUERY</h3>
+        <ul>
+          <li>PC &#58; 1920px &#45; 1400px</li>
+          <li>Mobile &#58; max 767px</li>
+        </ul>
+        <img src="images/media_kkd.png" alt="크리스피크림 도넛 미디어쿼리 목업 사진" />
+        <!-- 바로가기 버튼 -->
+        <ul class="go">
+          <li class="gosite"><a target="_blank" href="krispykreme/index.html">View Website</a></li>
+          <li class="gomobile"><a target="_blank" href="krispykreme/m/index.html">View Mobile App</a></li>
+        </ul>
+      </div>
+    </section>
     
-  <!-- INTRO SECTION -->
-  <section id="intro">
-    <div class="contentswrap">
-      <h2>크리스피크림 웹&#44; 모바일 앱 리뉴얼</h2>
-      <ul class="summary">
-        <li>
-          <h3>WORK</h3>
-          <p>UIUX 디자인 퍼블리싱</p>
-        </li>
-        <li>
-          <h3>RELEASE DATE</h3>
-          <p>2020&#46; 05&#46; 05</p>
-        </li>
-        <li>
-          <h3>TYPE</h3>
-          <p>WEB&#44; MOBILE APP</p>
-        </li>
-      </ul>
-      <h3>OVERVIEW</h3>
-      <p>
-        크리스피크림 도넛은 당일 생상한 신선한 도넛만 판매한다는 원칙으로 달콤하고 신선한 도넛을 제공하는 도넛 브랜드이다. 기존 웹사이트는 수 많은 배너 개수로 사용자의 주의를 분산시키고, 인터렉션 요소가 많지 않아 다소 단조로운 디자인으로 다가오는 점이 아쉬웠다. 리뉴얼을 진행하며 크리스피크림 도넛만의 메뉴가 잘 돋보일 수 있도록 했고, 사용자가 필요한 정보를 메인페이지에 배치해 접근성을 높였다.
-      </p>
-    </div>
-  </section>
-  
-  <!-- MEDIA SECTION -->
-  <section id="media">
-    <div class="contentswrap">
-      <h3>MEDIA QUERY</h3>
-      <ul>
-        <li>PC &#58; 1920px &#45; 1400px</li>
-        <li>Mobile &#58; max 767px</li>
-      </ul>
-      <img src="images/media_kkd.png" alt="크리스피크림 도넛 미디어쿼리 목업 사진" />
-      <!-- 바로가기 버튼 -->
-      <ul class="go">
-        <li class="gosite"><a target="_blank" href="krispykreme/index.html">View Website</a></li>
-        <li class="gomobile"><a target="_blank" href="krispykreme/m/index.html">View Mobile App</a></li>
-      </ul>
-    </div>
-  </section>
-  
-  <!-- GUIDE SECTION -->
-  <section id="guide">
-    <div class="contentswrap">
-      <h3>STYLE GUIDE</h3>
-      <ul>
-        <li>
-          <img src="images/typography_kkd.png" alt="크리스피크림 도넛 typography" />
-        </li>
-        <li>
-          <img src="images/color_kkd.png" alt="크리스피크림 도넛 color" />
-        </li>
-      </ul>
-      <h3>PAGE DESIGN</h3>
-      <dl>
-        <dt>Goal</dt>
-        <dd>
-          배너의 길이를 확장해 기존의 홈페이지 보다 사용자들이 신상품 이미지와 프로모션 이미지에 집중할 수 있도록 하고, 메뉴와 이벤트 정보를 한 눈에 확인할 수 있도록 한다.
-        </dd>
-        <dt>Concept</dt>
-        <dd>
-          다양한 마우스 오버 효과로 시각적 효과를 높이고, 땡땡이 무늬와 기존 크리스피크림 도넛 로고 색상인 그린과 레드를 포인트 컬러로 사용해 크리스피크림 도넛의 브랜드 아이덴티티를 나타내고 주 고객층인 젊은 고객들의 시선을 끌도록 한다.
-        </dd>
-      </dl>
-    </div>
-  </section>
-  
-  <!-- DETAIL SECTION -->
-  <section id="detail">
-    <div class="contentswrap">
-      <img class="pcdeail" src="images/pcdetail_kkd.png" alt="크리스피크림 도넛 pc 상세보기" />
-      <img class="mobiledetail" src="images/mobiledetail_kkd.png" alt="크리스피크림 도넛 mobile 상세보기" />
-    </div>
-  </section>
+    <!-- GUIDE SECTION -->
+    <section id="guide">
+      <div class="contentswrap">
+        <h3>STYLE GUIDE</h3>
+        <ul>
+          <li>
+            <img src="images/typography_kkd.png" alt="크리스피크림 도넛 typography" />
+          </li>
+          <li>
+            <img src="images/color_kkd.png" alt="크리스피크림 도넛 color" />
+          </li>
+        </ul>
+        <h3>PAGE DESIGN</h3>
+        <dl>
+          <dt>Goal</dt>
+          <dd>
+            배너의 길이를 확장해 기존의 홈페이지 보다 사용자들이 신상품 이미지와 프로모션 이미지에 집중할 수 있도록 하고, 메뉴와 이벤트 정보를 한 눈에 확인할 수 있도록 한다.
+          </dd>
+          <dt>Concept</dt>
+          <dd>
+            다양한 마우스 오버 효과로 시각적 효과를 높이고, 땡땡이 무늬와 기존 크리스피크림 도넛 로고 색상인 그린과 레드를 포인트 컬러로 사용해 크리스피크림 도넛의 브랜드 아이덴티티를 나타내고 주 고객층인 젊은 고객들의 시선을 끌도록 한다.
+          </dd>
+        </dl>
+      </div>
+    </section>
+    
+    <!-- DETAIL SECTION -->
+    <section id="detail">
+      <div class="contentswrap">
+        <img class="pcdeail" src="images/pcdetail_kkd.png" alt="크리스피크림 도넛 pc 상세보기" />
+        <img class="mobiledetail" src="images/mobiledetail_kkd.png" alt="크리스피크림 도넛 mobile 상세보기" />
+      </div>
+    </section>
+  </div>
+  <!-- [f]CONTENTS -->
   
   <!-- FOOTER -->
   <div class="footer">
