--- a/sub_overwatch.html
+++ b/sub_overwatch.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no" />
-  <title>Krispykreme</title>
+  <title>Overwatch</title>
   
   <!-- 오픈 그래프(The Open Graph protocol) -->
   <meta property="og:type" content="website" />
@@ -37,7 +37,7 @@
   <script defer src="./js/main.js"></script>
 </head>
 
-<body>
+<body id="overwatch_body">
   <!-- HOME BUTTON -->
   <header>
     <h1 class="myname">
@@ -208,19 +208,18 @@
   <div id="main">
     <div class="contentswrap">
       <div class="bg_wrap">
-        <img src="./images/main_kkd.png" class="bg_pc" alt="Krispykreme" />
-        <img src="./images/main_kkd_t.png" class="bg_tablet" alt="Krispykreme" />
-        <img src="./images/main_kkd_m.png" class="bg_mobile" alt="Krispykreme" />
+        <img src="./images/main_overwatch.png" class="bg_pc" alt="Overwatch" />
+        <img src="./images/main_overwatch_t.png" class="bg_tablet" alt="Overwatch" />
+        <img src="./images/main_overwatch_m.png" class="bg_mobile" alt="Overwatch" />
       </div>
       <div class="title">
-        <h1 class="logo">Krispykreme</h1>
-        <h2>Website &amp; Mobile App</h2>
-        <h2>Redisign</h2>
-        <p>크리스피크림 도넛</p>
-        <p>웹사이트 &amp; 앱 리디자인</p>
+        <h1 class="logo">Overwatch</h1>
+        <h2>Responsive Web</h2>
+        <p>오버워치</p>
+        <p>반응형 웹사이트 제작</p>
       </div>
       <ul class="period">
-        <li>디자인 &#58; 1주 &#47; 제작기간 &#58; 2주</li>
+        <li>제작기간 &#58; 1일</li>
         <li>참여율 100	&#37;</li>
       </ul>
     </div>
@@ -231,24 +230,24 @@
     <!-- INTRO SECTION -->
     <section id="intro">
       <div class="contentswrap">
-        <h2>크리스피크림 웹&#44; 모바일 앱 리뉴얼</h2>
+        <h2>오버워치 반응형 웹사이트 제작</h2>
         <ul class="summary">
           <li>
             <h3>WORK</h3>
-            <p>UIUX 디자인 및 제작</p>
+            <p>반응형 웹사이트 제작</p>
           </li>
           <li>
             <h3>RELEASE DATE</h3>
-            <p>2022&#46; 02&#46; 06</p>
+            <p>2022&#46; 01&#46; 29</p>
           </li>
           <li>
             <h3>TYPE</h3>
-            <p>WEB&#44; MOBILE APP</p>
+            <p>RESPONSIVE WEB</p>
           </li>
         </ul>
         <h3>OVERVIEW</h3>
         <p>
-          크리스피크림 도넛은 당일 생상한 신선한 도넛만 판매한다는 원칙으로 달콤하고 신선한 도넛을 제공하는 도넛 브랜드이다. 기존 웹사이트는 수 많은 배너 개수로 사용자의 주의를 분산시키고, 인터렉션 요소가 많지 않아 다소 단조로운 디자인으로 다가오는 점이 아쉬웠다. 리뉴얼을 진행하며 크리스피크림 도넛만의 메뉴가 잘 돋보일 수 있도록 했고, 사용자가 필요한 정보를 메인페이지에 배치해 접근성을 높였다.
+          OVERWATCH HERO SELECTOR 웹페이지를 제작했다. Pc, Tablet, Mobile 환경에서 사용자가 편리하게 볼 수 있도록 반응형으로 제작했다. 32가지의 히어로를 선택할 수 있는 메인페이지를 제작했다.
         </p>
       </div>
     </section>
@@ -259,13 +258,13 @@
         <h3>MEDIA QUERY</h3>
         <ul class="media_query">
           <li>PC &#58; 1920px &#45; 1400px</li>
+          <li>Tablet &#58; 1399px &#45; 768px</li>
           <li>Mobile &#58; max 767px</li>
         </ul>
-        <img src="images/media_kkd.png" alt="Krispykreme mediaquery" />
+        <img src="images/media_overwatch.png" alt="Overwatch mediaquery" />
         <!-- 바로가기 버튼 -->
         <ul class="go">
-          <li class="gosite"><a target="_blank" href="https://elegant-thompson-69b225.netlify.app/">View Website</a></li>
-          <li class="gomobile"><a target="_blank" href="https://vigorous-goldberg-477775.netlify.app/">View Mobile App</a></li>
+          <li class="gosite"><a target="_blank" href="https://loving-varahamihira-0a6152.netlify.app/">View Website</a></li>
         </ul>
       </div>
     </section>
@@ -277,33 +276,22 @@
         <ul>
           <li>
             <h3>TYPOGRAPHY</h3>
-            <img src="images/typography_kkd.png" alt="Krispykreme typography" />
+            <img src="images/typography_overwatch.png" alt="Overwatch typography" />
           </li>
           <li>
             <h3>COLOR</h3>
-            <img src="images/color_kkd.png" alt="Krispykreme color" />
+            <img src="images/color_overwatch.png" alt="Overwatch color" />
           </li>
         </ul>
-        <h3>PAGE DESIGN</h3>
-        <dl>
-          <dt>Goal</dt>
-          <dd>
-            배너의 길이를 확장해 기존의 홈페이지 보다 사용자들이 신상품 이미지와 프로모션 이미지에 집중할 수 있도록 하고, 메뉴와 이벤트 정보를 한 눈에 확인할 수 있도록 한다.
-          </dd>
-          <dt>Concept</dt>
-          <dd>
-            다양한 마우스 오버 효과로 시각적 효과를 높이고, 땡땡이 무늬와 기존 크리스피크림 도넛 로고 색상인 그린과 레드를 포인트 컬러로 사용해 크리스피크림 도넛의 브랜드 아이덴티티를 나타내고 주 고객층인 젊은 고객들의 시선을 끌도록 한다.
-          </dd>
-        </dl>
       </div>
     </section>
     
     <!-- DETAIL SECTION -->
     <section id="detail">
       <div class="contentswrap">
-        <img class="pcdeail" src="images/pcdetail_kkd.png" alt="Krispykreme overview" />
-        <img class="mobiledetail bg_normal" src="images/mobiledetail_kkd.png" alt="Krispykreme overview" />
-        <img class="mobiledetail bg_mobile" src="images/mobiledetail_kkd_m.png" alt="Krispykreme overview" />
+        <img class="pcdeail" src="images/pcdetail_overwatch.png" alt="Overwatch overview" />
+        <img class="mobiledetail bg_normal" src="images/mobiledetail_overwatch.png" alt="Overwatch overview" />
+        <img class="mobiledetail bg_mobile" src="images/mobiledetail_overwatch_m.png" alt="Overwatch overview" />
       </div>
     </section>
   </div>
