--- a/sub_donga.html
+++ b/sub_donga.html
@@ -53,7 +53,7 @@
     <ul id="main_nav">
       <li>
         <h3>
-          <a target="_blank" href="index.html">HOME</a>
+          <a href="index.html">HOME</a>
         </h3>
       </li>
       <li>
@@ -62,14 +62,14 @@
           <span class="material-icons arrow-down">expand_more</span>
         </h3>
         <ul class="sub_nav">
-          <li><a target="_blank" href="sub_starbucks.html">STARBUCKS</a></li>
-          <li><a target="_blank" href="sub_uriage.html">URIAGE</a></li>
-          <li><a target="_blank" href="sub_krispykreme.html">KRISPYKREME</a></li>
-          <li><a target="_blank" href="sub_yuhan.html">YUHAN</a></li>
-          <li><a target="_blank" href="sub_towsome.html">TWOSOME</a></li>
-          <li><a target="_blank" href="sub_dona.html">DONGA</a></li>
-          <li><a target="_blank" href="sub_dongbu.html">DONGBU</a></li>
-          <li><a target="_blank" href="sub_overwatch.html">OVERWATCH HERO</a></li>
+          <li><a href="sub_starbucks.html">STARBUCKS</a></li>
+          <li><a href="sub_uriage.html">URIAGE</a></li>
+          <li><a href="sub_krispykreme.html">KRISPYKREME</a></li>
+          <li><a href="sub_yuhan.html">YUHAN</a></li>
+          <li><a href="sub_towsome.html">TWOSOME</a></li>
+          <li><a href="sub_dona.html">DONGA</a></li>
+          <li><a href="sub_dongbu.html">DONGBU</a></li>
+          <li><a href="sub_overwatch.html">OVERWATCH HERO</a></li>
         </ul>
       </li>
       <!-- <li>
@@ -83,10 +83,10 @@
           <span class="material-icons arrow-down">expand_more</span>
         </h3>
         <ul class="sub_nav">
-          <li><a target="_blank" href="javascript:void(0)">GRAPHIC DESIGN</a></li>
-          <li><a target="_blank" href="javascript:void(0)">CARDNEWS</a></li>
-          <li><a target="_blank" href="javascript:void(0)">DESIGN PROJECT</a></li>
-          <li><a target="_blank" href="javascript:void(0)">DIGITAL DRAWING</a></li>
+          <li><a href="javascript:void(0)">GRAPHIC DESIGN</a></li>
+          <li><a href="javascript:void(0)">CARDNEWS</a></li>
+          <li><a href="javascript:void(0)">DESIGN PROJECT</a></li>
+          <li><a href="javascript:void(0)">DIGITAL DRAWING</a></li>
         </ul>
       </li>
       <!-- <li>
