--- a/sub_twosome.html
+++ b/sub_twosome.html
@@ -66,8 +66,8 @@
           <li><a href="sub_uriage.html">URIAGE</a></li>
           <li><a href="sub_krispykreme.html">KRISPYKREME</a></li>
           <li><a href="sub_yuhan.html">YUHAN</a></li>
-          <li><a href="sub_towsome.html">TWOSOME</a></li>
-          <li><a href="sub_dona.html">DONGA</a></li>
+          <li><a href="sub_twosome.html">TWOSOME</a></li>
+          <li><a href="sub_donga.html">DONGA</a></li>
           <li><a href="sub_dongbu.html">DONGBU</a></li>
           <li><a href="sub_overwatch.html">OVERWATCH HERO</a></li>
         </ul>
