--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
             <span class="material-icons arrow-down">expand_more</span>
           </h3>
           <ul class="sub_nav">
-            <li><a target="_blank" href="sub_starbucks.html">STARBUCKS</a></li>
-            <li><a target="_blank" href="sub_uriage.html">URIAGE</a></li>
-            <li><a target="_blank" href="sub_krispykreme.html">KRISPYKREME</a></li>
-            <li><a target="_blank" href="sub_yuhan.html">YUHAN</a></li>
-            <li><a target="_blank" href="sub_towsome.html">TWOSOME</a></li>
-            <li><a target="_blank" href="sub_dona.html">DONGA</a></li>
-            <li><a target="_blank" href="sub_dongbu.html">DONGBU</a></li>
-            <li><a target="_blank" href="sub_overwatch.html">OVERWATCH HERO</a></li>
+            <li><a href="sub_starbucks.html">STARBUCKS</a></li>
+            <li><a href="sub_uriage.html">URIAGE</a></li>
+            <li><a href="sub_krispykreme.html">KRISPYKREME</a></li>
+            <li><a href="sub_yuhan.html">YUHAN</a></li>
+            <li><a href="sub_twosome.html">TWOSOME</a></li>
+            <li><a href="sub_donga.html">DONGA</a></li>
+            <li><a href="sub_dongbu.html">DONGBU</a></li>
+            <li><a href="sub_overwatch.html">OVERWATCH HERO</a></li>
           </ul>
         </li>
         <li>
