--- a/sub_twosome.html
+++ b/sub_twosome.html
@@ -262,7 +262,7 @@
         <img src="images/media_twosome.png" alt="Twosome mediaquery" />
         <!-- 바로가기 버튼 -->
         <ul class="go">
-          <li class="gosite"><a target="_blank" href="https://reverent-hermann-fd8089.netlify.app/">View Website</a></li>
+          <li class="gosite"><a target="_blank" href="https://reverent-hermann-fd8089.netlify.app/">View Mobile App</a></li>
         </ul>
       </div>
     </section>
