--- a/sub_uriage.html
+++ b/sub_uriage.html
@@ -230,7 +230,7 @@
     <!-- INTRO SECTION -->
     <section id="intro">
       <div class="contentswrap">
-        <h2>유리아쥬 반응형 웹사이트 제작</h2>
+        <h2 class=>유리아쥬 반응형 웹사이트 제작</h2>
         <ul class="summary">
           <li>
             <h3>WORK</h3>
