--- a/sub_starbucks.html
+++ b/sub_starbucks.html
@@ -253,22 +253,22 @@
     </section>
   
     <!-- MEDIA SECTION -->
-    <section id="media">
+    <section id="media" class="scroll-spy">
       <div class="contentswrap">
         <h3>MEDIA QUERY</h3>
         <ul class="media_query">
           <li>PC &#58; 1920px &#45; 1400px</li>
         </ul>
-        <img src="images/media_starbucks.png" alt="Starbucks mediaquery" />
+        <img src="images/media_starbucks.png" alt="Starbucks mediaquery" class="back-to-position to-right" />
         <!-- 바로가기 버튼 -->
-        <ul class="go">
+        <ul class="go" class="back-to-position to-left" >
           <li class="gosite"><a target="_blank" href="https://wonderful-morse-63f91e.netlify.app/">View Website</a></li>
         </ul>
       </div>
     </section>
     
     <!-- GUIDE SECTION -->
-    <section id="guide">
+    <section id="guide" class="scroll-spy">
       <div class="contentswrap">
         <h3>STYLE GUIDE</h3>
         <ul>
